text-scale-mode-step

--- a/emacs.org
+++ b/emacs.org
@@ -420,6 +420,7 @@ Works w/o being logged in.                         [[https://github.com/emacs-gr
   (global-set-key (kbd "C-c C-r") 'eval-region)
 
   ;; Make font bigger/smaller.
+  (setq text-scale-mode-step 1.1)
   (global-set-key (kbd "C-=") 'text-scale-increase)
   (global-set-key (kbd "C--") 'text-scale-decrease)
   (global-set-key (kbd "C-0") 'text-scale-adjust)
