--- a/emacs.org
+++ b/emacs.org
@@ -77,10 +77,13 @@ You can also use =M-x auto-package-update-now= to update right now!
   (set-fringe-mode 10)                       ; Give some breathing room
   (setq visible-bell t)                      ; Set up the visible bell
   (save-place-mode 1)                        ; Open file where last visited
-  (global-auto-revert-mode 1)                ; refresh buffer if changed on disk
-
   (add-hook 'text-mode-hook 'flyspell-mode)  ; enable spellcheck on text mode
   ;; (add-hook 'prog-mode-hook 'hl-line-mode)   ; highlight lines when programming
+
+  ;; The following helps syncing
+  (global-auto-revert-mode 1)                ; refresh buffer if changed on disk
+  (setq auto-revert-use-notify nil)          ; don't notify?
+  (setq auto-revert-verbose nil)             ;
 
   ;; Open text files in Org-Mode
   ;; (add-to-list 'auto-mode-alist '("\\.text\\'" . org-mode))
@@ -249,7 +252,7 @@ More to do at [[https://youtu.be/PMWwM8QJAtU][here]]: dired-open
   (use-package dired
     :ensure nil
     :commands dired
-    :hook (dired-mode . dired-hide-details-mode) ;; "use '(' to see details
+    ;; :hook (dired-mode . dired-hide-details-mode) ;; '(' to toggle details
     :config
     (setq dired-listing-switches "-agho --group-directories-first" )
     (setq find-ls-option '("-print0 | xargs -0 ls -agho" . ""))
@@ -719,11 +722,6 @@ After this, the =compile= automatically holds the correct command.
   :bind ("M-;". evilnc-comment-or-uncomment-lines))
 #+end_src
 
-** Emacs-lisp
-#+begin_src emacs-lisp
-  (add-hook 'emacs-lisp-mode-hook #'flycheck-mode)
-#+end_src
-
 ** Tree Sitter Highlighting
 #+begin_src emacs-lisp
   (use-package tree-sitter-langs)
@@ -731,6 +729,12 @@ After this, the =compile= automatically holds the correct command.
 #+end_src
 
 * Languages
+** Emacs-lisp
+- use =C-c '= to view elisp babel blocks in their own file (to get completion).
+#+begin_src emacs-lisp
+  ; (add-hook 'emacs-lisp-mode-hook #'flycheck-mode)
+#+end_src
+
 ** Bash
 - Flycheck uses shellcheck, which requires ~sudo dnf install -y shellcheck~
 - debuggers are available
@@ -961,7 +965,13 @@ The following keeps the compilation buffer if there are warnings or errors, and 
           org-cycle-separator-lines 2
           org-capture-bookmark nil
           org-list-indent-offset 1
-          org-image-actual-width nil) ; fix to allow picture resizing
+          org-image-actual-width nil ; fix to allow picture resizing
+          org-return-follows-link t  ; keep for sure ;@work
+          org-use-speed-commands t ; try out
+          )
+    (setq org-agenda-tags-column
+        (assoc-default (system-name) '(("xps" . 75)
+                                       ("dsk" . 75)))) ;; default is auto
     )
 #+end_src
 
@@ -1051,9 +1061,11 @@ For syntax highlighting in export html, we want htmlize version > =1.34=
 (use-package htmlize)
 #+end_src
 
-*** Save to HTML on save
+*** HOLD Save to HTML on save
+- 2023-02-11 removing function, trying to not export as often
+
 Figure out how to set this in the header properties rather than hardcoding here.
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :tangle no
   (defun jmn-org-export-html-on-save()
     (interactive)
     (when (member (buffer-file-name)
@@ -1087,24 +1099,31 @@ Following the tutorial [[https://emacs.cafe/emacs/orgmode/gtd/2017/06/30/orgmode
   (setq org-todo-keywords '((sequence "TODO(t)" "NEXT(n)" "HOLD(h)"
                                       "|" "DONE(d)")))
   (setq org-todo-keyword-faces
-      '(("NEXT" . "yellow")
-        ("HOLD" . "orange")))
+        '(("NEXT" . "yellow")
+          ("HOLD" . "orange")))
 
-  (setq org-agenda-files '("~/Dropbox/gtd/inbox.org"
-                           "~/Dropbox/gtd/gtd.org"
-                           "~/Dropbox/gtd/habits.org"
-                           "~/Dropbox/gtd/whip.org"))
+  (require 'find-lisp)
+  (setq org-directory "~/Dropbox/gtd/")
 
-  ;; level/maxlevel =  order in heirarchy
-  (setq org-refile-targets '(("~/Dropbox/gtd/gtd.org" :maxlevel . 3)
-                             ("~/Dropbox/gtd/someday.org" :level . 1)
-                             ("~/Dropbox/gtd/whip.org" :maxlevel . 2)))
+  (setq org-agenda-files
+        (find-lisp-find-files org-directory "\.org$"))
 
-  ;; Save Org buffers after refiling
-  (advice-add 'org-refile :after 'org-save-all-org-buffers)
-  (advice-add 'org-refile :after 'org-agenda-redo-all)
+  ;; level/maxlevel =  order in hierarchy
+  (setq org-refile-targets '(("projects.org" :maxlevel . 3)
+                             ("someday.org" :level . 1)
+                             ("whip.org" :maxlevel . 2)))
 
-  (setq org-agenda-prefix-format '((agenda . " %i %-8:c%t [%e]  ")
+  ;; https://github.com/syl20bnr/spacemacs/issues/3094
+  (setq org-refile-use-outline-path 'file
+        org-outline-path-complete-in-steps nil)
+  (setq org-refile-allow-creating-parent-nodes 'confirm)
+
+
+  (setq org-refile-targets '(("next.org" :level . 0)
+                             ("someday.org" :level . 0)
+                             ("projects.org" :maxlevel . 1)))
+
+  (setq org-agenda-prefix-format '((agenda . " %i %-8:c%t [%e] %s")
                                    (todo . " %i %-8:c [%-4e]  ")
                                    (tags . " %i %-12:c")))
 
@@ -1116,17 +1135,42 @@ Following the tutorial [[https://emacs.cafe/emacs/orgmode/gtd/2017/06/30/orgmode
 
   (setq org-agenda-custom-commands
         '(("d" "Dashboard"
-           ((agenda "" ((org-deadline-warning-days 7)))
+           ((agenda "" ((org-deadline-warning-days 30)))
             (todo "NEXT"
-                  ((org-agenda-overriding-header "Next Tasks")))
+                  ((org-agenda-overriding-header "Next Un-Scheduled Tasks")))
             (todo "TODO"
-                       ((org-agenda-overriding-header "Active Tasks")))))))
+                  ((org-agenda-overriding-header "Active Un-Scheduled Tasks")))
+            ))
+          (" " "Agenda"
+           ((agenda ""
+                    ((org-agenda-span 'day)
+                     (org-deadline-warning-days 365)))
+            (todo "TODO"
+                  ((org-agenda-overriding-header "To Refile")
+                   (org-agenda-files
+                    (list (concat org-directory "inbox.org")))))
+            (todo "NEXT"
+                  ((org-agenda-overriding-header "In Progress")
+                   (org-agenda-files
+                    (list (concat org-directory "projects.org")))))
+            (todo "TODO"
+                  ((org-agenda-overriding-header "Projects")
+                   (org-agenda-files
+                    (list (concat org-directory "projects.org")))))
+            (todo "TODO"
+                  ((org-agenda-overriding-header "One-off Tasks")
+                   (org-agenda-files
+                    (list (concat org-directory "next.org")))
+                   (org-agenda-files '("~/Dropbox/gtd/next.org")))
+                   (org-agenda-skip-function '(org-agenda-skip-entry-if
+                                               'deadline 'scheduled)))))))
 
-  (global-set-key (kbd "C-c d") (lambda (&optional args)
-                                  (interactive "P")
-                                  (org-agenda args "d")))
 
-  (setq org-agenda-todo-ignore-scheduled 'all)
+          (global-set-key (kbd "C-c a") (lambda (&optional args)
+                                         (interactive "P")
+                                         (org-agenda args " ")))
+
+          (setq org-agenda-todo-ignore-scheduled 'all)
 #+end_src
 
 *** Habits
@@ -1136,7 +1180,9 @@ File holding habits must be added to =org-agenda-files= above
   ;; org habit;;
   (require 'org-habit)
   (add-to-list 'org-modules 'org-habit)
-  (setq org-habit-graph-column 60) ;; default is 40
+  (setq org-habit-graph-column
+        (assoc-default (system-name) '(("xps" . 55)
+                                       ("dsk" . 65)))) ;; default is 40
 #+end_src
 
 *** Capture Templates
@@ -1160,8 +1206,6 @@ File holding habits must be added to =org-agenda-files= above
            (file+headline "~/Dropbox/gtd/whip.org"  "Whip")
            "* %i%? \n %U %^t" :empty-lines 1)))
 
-  ;; if agenda is already open, update it with new capture
-  (advice-add 'org-capture-finalize :after 'org-agenda-redo-all)
 #+end_src
 
 *** Archive
@@ -1181,6 +1225,85 @@ File holding habits must be added to =org-agenda-files= above
        (org-archive-subtree)
        (setq org-map-continue-from (org-element-property :begin (org-element-at-point))))
      "/DONE" 'file))
+
+#+end_src
+
+*** Process Inbox
+https://github.com/jethrokuan/.emacs.d/blob/master/init.el
+#+begin_src emacs-lisp
+  (defvar jethro/org-current-effort "1:00"
+    "Current effort for agenda items.")
+
+    (defun jethro/my-org-agenda-set-effort (effort)
+        "Set the effort property for the current headline."
+        (interactive
+         (list (read-string (format "Effort [%s]: " jethro/org-current-effort) nil nil jethro/org-current-effort)))
+        (setq jethro/org-current-effort effort)
+        (org-agenda-check-no-diary)
+        (let* ((hdmarker (or (org-get-at-bol 'org-hd-marker)
+                             (org-agenda-error)))
+               (buffer (marker-buffer hdmarker))
+               (pos (marker-position hdmarker))
+               (inhibit-read-only t)
+               newhead)
+          (org-with-remote-undo buffer
+            (with-current-buffer buffer
+              (widen)
+              (goto-char pos)
+              (org-show-context 'agenda)
+              (funcall-interactively 'org-set-effort nil jethro/org-current-effort)
+              (end-of-line 1)
+              (setq newhead (org-get-heading)))
+            (org-agenda-change-all-lines newhead hdmarker))))
+
+      (defun jethro/org-agenda-process-inbox-item ()
+        "Process a single item in the org-agenda."
+        (interactive)
+        (org-with-wide-buffer
+         (org-agenda-set-tags)
+         (org-agenda-priority)
+         (call-interactively 'jethro/my-org-agenda-set-effort)
+         (org-agenda-refile nil nil t)))
+
+  (global-set-key (kbd "C-c p") #'jethro/org-agenda-process-inbox-item)
+#+end_src
+
+*** Advice
+
+#+begin_src emacs-lisp
+  (defmacro func-ignore (fnc)
+    "Return function that ignores its arguments and invokes FNC."
+    `(lambda (&rest _rest)
+       (funcall ,fnc)))
+
+  (advice-add 'org-archive-done-tasks-tree
+              :after (func-ignore #'org-save-all-org-buffers))
+  (advice-add 'org-archive-done-tasks-file
+              :after (func-ignore #'org-save-all-org-buffers))
+  (advice-add 'org-refile
+              :after (func-ignore #'org-save-all-org-buffers))
+  (advice-add 'org-deadline
+              :after (func-ignore #'org-save-all-org-buffers))
+  (advice-add 'org-schedule
+              :after (func-ignore #'org-save-all-org-buffers))
+  (advice-add 'org-store-log-note
+              :after (func-ignore #'org-save-all-org-buffers))
+  (advice-add 'org-todo
+              :after (func-ignore #'org-save-all-org-buffers))
+
+  ;; if agenda is already open, update it with new capture;; work?
+  (advice-add 'org-capture-finalize
+              :after (func-ignore #'org-agenda-redo-all))
+
+#+end_src
+
+*** TODO make global header
+#+begin_src emacs-lisp :tangle no
+
+  #+STARTUP: content showstars indent
+  #+TAGS: dev(d) music(m) read(r) @work(w)
+  #+PROPERTY: Effort_ALL 0 0:05 0:10 0:15 0:30 0:45 1:00 2:00 4:00
+
 #+end_src
 
 * Terminals
